--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <div class="container-header">
+
+        </div>
+    </header>
+
+    <main class="container-main">
+
+    </main>
+
+    <footer class="container-footer">
+
+    </footer>
     
 </body>
 </html>
