feat: add items in header, items in footer, insert img

--- a/index.html
+++ b/index.html
@@ -5,22 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
         <div class="container-header">
-
+            <div class="item-header" title="About me">About me</div>
+            <div class="item-header" title="Skill">Skill</div>
+            <div class="item-header" title="Code Example">Code Example</div>
+            <div class="item-header" title="Education">Education</div>
+            <div class="item-header" title="Languages">Languages</div>
         </div>
     </header>
 
     <main class="container-main">
-
+        <div class="aside">
+            <div><img src="/img/LVV.png" alt="Here is my photo" width="250"></div>
+            <div>aside</div>
+        </div>
+        <div class="section">section</div>
     </main>
 
     <footer class="container-footer">
-
+        <div class="item-footer github">My GitHub</div>
+        <div class="item-footer since">2021</div>
     </footer>
-    
+
 </body>
 </html>
