feat: base design and fill contanct

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Vadim Lega</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <div class="container-header">
+        <div class="container-header" >
             <div class="item-header" title="About me">About me</div>
             <div class="item-header" title="Skill">Skill</div>
             <div class="item-header" title="Code Example">Code Example</div>
@@ -19,13 +19,28 @@
         </div>
     </header>
 
+    <div style="border-bottom: solid 4px #fa5f06"></div>
+
     <main class="container-main">
-        <div class="aside">
-            <div><img src="/img/LVV.png" alt="Here is my photo" width="250"></div>
-            <div>aside</div>
+        <div class="main">
+            <div class="image"><img src="/img/LVV.png" alt="Here is my photo" width="260"></div>
+            <div class="aside">
+                <aside>
+                    <h2>Contact:</h2>
+                    <br>
+                    <ul>
+                        <li class="item-contact">Location: Moscow, Russia</li>
+                        <li class="item-contact">E-mail: legavv@gmail.com</li>
+                        <li class="item-contact">Telegram: @legavv</li>
+                        <li class="item-contact">Discord: Vadim Lega (legavv)</li>
+                    </ul>
+                </aside>
+            </div>
         </div>
         <div class="section">section</div>
     </main>
+
+    <div style="border-bottom: solid 5px #fa5f06"></div>
 
     <footer class="container-footer">
         <div class="item-footer github">My GitHub</div>
