feat: resize my img add favicon and content to section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Vadim Lega</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/img/favicon.ico">
 </head>
 <body>
 
@@ -19,11 +20,11 @@
         </div>
     </header>
 
-    <div style="border-bottom: solid 4px #fa5f06"></div>
+    <div class="line"></div>
 
     <main class="container-main">
         <div class="main">
-            <div class="image"><img src="/img/LVV.png" alt="Here is my photo" width="260"></div>
+            <div class="image"><img src="./assets/img/LVV3.png" alt="Here is my photo" width="260"></div>
             <div class="aside">
                 <aside>
                     <h2>Contact:</h2>
@@ -36,16 +37,44 @@
                     </ul>
                 </aside>
             </div>
+
         </div>
-        <div class="section">section</div>
+        <div class="section">
+            <H1>VADIM LEGA</H1>
+            <h2>About Me</h2>
+            <p>I am 53 years old. I enjoy learning new things. I want to become a frot-end developer.</p>
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Git/GitHub</li>
+                <li>C# Basic</li>
+                <li>Piton Basic</li>
+                <li>Basic: Lua, R</li>
+            </ul>
+            <h2>Code Example</h2>
+            <pre>
+                .text-block {
+                    background-color: blue;
+                    width: 228px;
+                    height: 21px;
+                }
+            </pre>
+            <h2>Education</h2>
+            <p>Moscow Institute of Physics and Technology, applied mathematics and physics</p>
+            <h2>Languages</h2>
+            <ul>
+                <li>Russian native</li>
+            </ul>
+        </div>
     </main>
 
-    <div style="border-bottom: solid 5px #fa5f06"></div>
+    <div class="line"></div>
 
     <footer class="container-footer">
         <div class="item-footer github">My GitHub</div>
-        <div class="item-footer since">2021</div>
+        <div class="item-footer since">@2021 legavv</div>
     </footer>
-
+    https://rs.school/js/
 </body>
 </html>
