feat: add link to header and shift list ul

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
                     &nbsp;
                  </div>
                  <nav class="nav">
-                    <div class="item-nav" title="About me">About me</div>
-                    <div class="item-nav" title="Skill">Skill</div>
-                    <div class="item-nav" title="Code Example">Code Example</div>
-                    <div class="item-nav" title="Education">Education</div>
-                    <div class="item-nav" title="Languages">Languages</div>
-                    <div class="item-nav" title="Contact">Contact</div>
+                    <ul class="nav-list">
+                        <li class="item-nav"><a href="#aboutMe" class="nav-link">About me</a></li>
+                        <li class="item-nav"><a href="#skills" class="nav-link">Skills</a></li>
+                        <li class="item-nav"><a href="#codeExample" class="nav-link">Code Example</a></li>
+                        <li class="item-nav"><a href="#education" class="nav-link">Education</a></li>
+                        <li class="item-nav"><a href="#languages" class="nav-link">Languages</a></li>
+                        <li class="item-nav"><a href="#contact" class="nav-link">Contact</a></li>
+                    </ul>
                 </nav>
             </div>    
         </header>
@@ -44,7 +46,7 @@
                     <div class="highlight-title">
                         <h2>Skills</h2>
                     </div>
-                    <ul>
+                    <ul class="shift-list">
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Git/GitHub</li>
@@ -76,7 +78,7 @@
                     <div class="highlight-title">
                         <h2>Languages</h2>
                     </div>
-                    <ul>
+                    <ul class="shift-list">
                         <li>Russian native</li>
                     </ul>
                 </div>
@@ -84,8 +86,7 @@
                     <div class="highlight-title">
                         <h2>Contact:</h2>
                     </div>
-                    <br>
-                    <ul>
+                    <ul class="shift-list">
                         <li>Location: Moscow, Russia</li>
                         <li>E-mail: <a href="mailto:legavv@gmail.com">legavv@gmail.com</a></li>
                         <li>Telegram: @legavv</li>
