--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
         <div class="line"></div>
     
         <footer class="container-footer">
-            <div class="item-footer github">My GitHub</div>
+            <div class="item-footer github">
+                <a href="https://github.com/legavv">My GitHub</a>   
+            </div>
             <div class="item-footer since">@2021 legavv</div>
             <div class="item-footer logoschool">
                 <a href="https://rs.school/js/"><img src="./assets/svg/rs_school_js.svg"></a>
