feat: interactive link and anchors

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <div class="colomn-main-first">
                 <div class="about-me">
                     <div class="highlight-title">
-                        <h2>About Me</h2>
+                        <h2>About Me<a name="aboutMe"></a></h2>
                     </div>   
                     <p>I am 53 years old. I enjoy learning new things. I want to become a frot-end developer.</p>
                 </div>
                 <div class="skill">
                     <div class="highlight-title">
-                        <h2>Skills</h2>
+                        <h2>Skills<a name="skills"></a></h2>
                     </div>
                     <ul class="shift-list">
                         <li>HTML</li>
@@ -57,26 +57,29 @@
                 </div>
                 <div class="education">
                     <div class="highlight-title">
-                        <h2>Education</h2>
+                        <h2>Education<a name="education"></a></h2>
                     </div>
                     <p>Moscow Institute of Physics and Technology, applied mathematics and physics</p>
                 </div>
             </div>
             <div class="colomn-main-second">
-                <div class="code-example">                    <div class="highlight-title">
-                    <h2>Code Example</h2>
-                </div>
-                    <pre>
-                        .text-block {
-                            background-color: blue;
-                            width: 228px;
-                            height: 21px;
-                        }
-                    </pre>
+                <div class="code-example">                    
+                    <div class="highlight-title">
+                        <h2>Code Example<a name="codeExample"></a></h2>
+                    </div>
+                    <div class="code">
+                        <pre>
+.text-block {
+    background-color: blue;
+    width: 228px;
+    height: 21px;
+}
+                        </pre>
+                    </div>
                 </div>
                 <div class="languages">
                     <div class="highlight-title">
-                        <h2>Languages</h2>
+                        <h2>Languages<a name="languages"></a></h2>
                     </div>
                     <ul class="shift-list">
                         <li>Russian native</li>
@@ -84,7 +87,7 @@
                 </div>
                 <div class="contact">
                     <div class="highlight-title">
-                        <h2>Contact:</h2>
+                        <h2>Contact:<a name="contact"></a></h2>
                     </div>
                     <ul class="shift-list">
                         <li>Location: Moscow, Russia</li>
