refactor: change div into section and add id section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <header class="container-header">
             <img src="./assets/img/LVV3.png" alt="Here is my photo" width="150">
             <div class="name-and-nav">
-                 <div class="name">
-                     <h1>VADIM LEGA</h1>
-                 </div>
+                 <section class="name" id="name-title">
+                     <h1 class="section-title">VADIM LEGA</h1>
+                 </section>
                  <div class="empty">
                     &nbsp;
                  </div>
@@ -36,15 +36,15 @@
     
         <main class="container-main">
             <div class="colomn-main-first">
-                <div class="about-me">
+                <section class="about-me" id="about-me-id">
                     <div class="highlight-title">
-                        <h2>About Me<a name="aboutMe"></a></h2>
+                        <h2 class="section-title">About Me<a name="aboutMe"></a></h2>
                     </div>   
                     <p>I am 53 years old. I enjoy learning new things. I want to become a frot-end developer.</p>
-                </div>
-                <div class="skill">
+                </section>
+                <section class="skill" id="skills-id">
                     <div class="highlight-title">
-                        <h2>Skills<a name="skills"></a></h2>
+                        <h2 class="section-title">Skills<a name="skills"></a></h2>
                     </div>
                     <ul class="shift-list">
                         <li>HTML</li>
@@ -54,18 +54,18 @@
                         <li>Piton Basic</li>
                         <li>Basic: Lua, R</li>
                     </ul>
-                </div>
-                <div class="education">
+                </section>
+                <section class="education" id="education-id">
                     <div class="highlight-title">
-                        <h2>Education<a name="education"></a></h2>
+                        <h2 class="section-title">Education<a name="education"></a></h2>
                     </div>
                     <p>Moscow Institute of Physics and Technology, applied mathematics and physics</p>
-                </div>
+                </section>
             </div>
             <div class="colomn-main-second">
-                <div class="code-example">                    
+                <section class="code-example" id="code-example-id">                    
                     <div class="highlight-title">
-                        <h2>Code Example<a name="codeExample"></a></h2>
+                        <h2 class="section-title">Code Example<a name="codeExample"></a></h2>
                     </div>
                     <div class="code">
                         <pre>
@@ -76,18 +76,18 @@
 }
                         </pre>
                     </div>
-                </div>
-                <div class="languages">
+                </section>
+                <section class="languages" id="languages-id">
                     <div class="highlight-title">
-                        <h2>Languages<a name="languages"></a></h2>
+                        <h2 class="section-title">Languages<a name="languages"></a></h2>
                     </div>
                     <ul class="shift-list">
                         <li>Russian native</li>
                     </ul>
-                </div>
-                <div class="contact">
+                </section>
+                <section class="contact" id="contact-id">
                     <div class="highlight-title">
-                        <h2>Contact:<a name="contact"></a></h2>
+                        <h2 class="section-title">Contact:<a name="contact"></a></h2>
                     </div>
                     <ul class="shift-list">
                         <li>Location: Moscow, Russia</li>
@@ -95,7 +95,7 @@
                         <li>Telegram: @legavv</li>
                         <li>Discord: Vadim Lega (legavv)</li>
                     </ul>
-                </div>
+                </section>
             </div>
         </main>
     
