--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                  </div>
                  <nav class="nav">
                     <ul class="nav-list">
-                        <li class="item-nav"><a href="#aboutMe" class="nav-link">About me</a></li>
-                        <li class="item-nav"><a href="#skills" class="nav-link">Skills</a></li>
-                        <li class="item-nav"><a href="#codeExample" class="nav-link">Code Example</a></li>
-                        <li class="item-nav"><a href="#education" class="nav-link">Education</a></li>
-                        <li class="item-nav"><a href="#languages" class="nav-link">Languages</a></li>
-                        <li class="item-nav"><a href="#contact" class="nav-link">Contact</a></li>
+                        <li class="item-nav"><a href="#about-me-id" class="nav-link">About me</a></li>
+                        <li class="item-nav"><a href="#skills-id" class="nav-link">Skills</a></li>
+                        <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
+                        <li class="item-nav"><a href="#code-example-id" class="nav-link">Code Example</a></li>
+                        <li class="item-nav"><a href="#languages-id" class="nav-link">Languages</a></li>
+                        <li class="item-nav"><a href="#contact-id" class="nav-link">Contact</a></li>
                     </ul>
                 </nav>
             </div>    
@@ -38,13 +38,13 @@
             <div class="colomn-main-first">
                 <section class="about-me" id="about-me-id">
                     <div class="highlight-title">
-                        <h2 class="section-title">About Me<a name="aboutMe"></a></h2>
+                        <h2 class="section-title">About Me</h2>
                     </div>   
                     <p>I am 53 years old. I enjoy learning new things. I want to become a frot-end developer.</p>
                 </section>
                 <section class="skill" id="skills-id">
                     <div class="highlight-title">
-                        <h2 class="section-title">Skills<a name="skills"></a></h2>
+                        <h2 class="section-title">Skills</h2>
                     </div>
                     <ul class="shift-list">
                         <li>HTML</li>
@@ -57,7 +57,7 @@
                 </section>
                 <section class="education" id="education-id">
                     <div class="highlight-title">
-                        <h2 class="section-title">Education<a name="education"></a></h2>
+                        <h2 class="section-title">Education</h2>
                     </div>
                     <p>Moscow Institute of Physics and Technology, applied mathematics and physics</p>
                 </section>
@@ -65,7 +65,7 @@
             <div class="colomn-main-second">
                 <section class="code-example" id="code-example-id">                    
                     <div class="highlight-title">
-                        <h2 class="section-title">Code Example<a name="codeExample"></a></h2>
+                        <h2 class="section-title">Code Example</h2>
                     </div>
                     <div class="code">
                         <pre>
@@ -79,7 +79,7 @@
                 </section>
                 <section class="languages" id="languages-id">
                     <div class="highlight-title">
-                        <h2 class="section-title">Languages<a name="languages"></a></h2>
+                        <h2 class="section-title">Languages</h2>
                     </div>
                     <ul class="shift-list">
                         <li>Russian native</li>
@@ -87,7 +87,7 @@
                 </section>
                 <section class="contact" id="contact-id">
                     <div class="highlight-title">
-                        <h2 class="section-title">Contact:<a name="contact"></a></h2>
+                        <h2 class="section-title">Contact:</h2>
                     </div>
                     <ul class="shift-list">
                         <li>Location: Moscow, Russia</li>
@@ -107,7 +107,7 @@
             </div>
             <div class="item-footer since">@2021 legavv</div>
             <div class="item-footer logoschool">
-                <a href="https://rs.school/js/"><img src="./assets/svg/rs_school_js.svg"></a>
+                <a href="https://rs.school/js/"><img src="./assets/svg/rs_school_js.svg" alt="logo RSSchool"></a>
             </div>
         </footer>
         
