feat: add level English

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     </div>
                     <ul class="shift-list">
                         <li>Russian native</li>
+                        <li>English A1 (in learn)</li>  
                     </ul>
                 </section>
                 <section class="contact" id="contact-id">
