feat: add section projects

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <ul class="nav-list">
                         <li class="item-nav"><a href="#about-me-id" class="nav-link">About me</a></li>
                         <li class="item-nav"><a href="#skills-id" class="nav-link">Skills</a></li>
-                        <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
                         <li class="item-nav"><a href="#code-example-id" class="nav-link">Code Example</a></li>
+                        <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
+                        <li class="item-nav"><a href="#projects-id" class="nav-link">Projects</a></li>
                         <li class="item-nav"><a href="#languages-id" class="nav-link">Languages</a></li>
                         <li class="item-nav"><a href="#contact-id" class="nav-link">Contact</a></li>
                     </ul>
@@ -55,14 +56,6 @@
                         <li>Basic: Lua, R</li>
                     </ul>
                 </section>
-                <section class="education" id="education-id">
-                    <div class="highlight-title">
-                        <h2 class="section-title">Education</h2>
-                    </div>
-                    <p>Moscow Institute of Physics and Technology, applied mathematics and physics</p>
-                </section>
-            </div>
-            <div class="colomn-main-second">
                 <section class="code-example" id="code-example-id">                    
                     <div class="highlight-title">
                         <h2 class="section-title">Code Example</h2>
@@ -75,6 +68,24 @@
     height: 21px;
 }
                         </pre>
+                    </div>
+                </section>
+            </div>
+            <div class="colomn-main-second">
+                <section class="education" id="education-id">
+                    <div class="highlight-title">
+                        <h2 class="section-title">Education</h2>
+                    </div>
+                    <p>Moscow Institute of Physics and Technology, applied mathematics and physics</p>
+                </section>
+                <section class="projects" id="projects-id">                    
+                    <div class="highlight-title">
+                        <h2 class="section-title">Projects</h2>
+                    </div>
+                    <div class="item-project">
+                        <ul class="shift-list">
+                            <li>CV: <a href="https://legavv.github.io/rsschool-cv/">https://legavv.github.io/rsschool-cv/</a></li>
+                        </ul>
                     </div>
                 </section>
                 <section class="languages" id="languages-id">
