refactor: change code Languages

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <ul class="shift-list">
                         <li>Russian native</li>
-                        <li>English A1 (in learn)</li>  
+                        <li>English A1 (learn)</li>  
                     </ul>
                 </section>
                 <section class="contact" id="contact-id">
