feat: add logo GitHub

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     
         <footer class="container-footer">
             <div class="item-footer github">
-                <a href="https://github.com/legavv">My GitHub</a>   
+                <a href="https://github.com/legavv"><img src="./assets/img/GitHub-Mark-64px.png" alt="Logo GitHub" width="30">GitHub</a>   
             </div>
             <div class="item-footer since">@2021 legavv</div>
             <div class="item-footer logoschool">
