feat: new design with circle img and square mark

--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
     <div class="container">
 
         <header class="container-header">
-            <img src="./assets/img/LVV3.png" alt="Here is my photo" width="150">
-            <div class="name-and-nav">
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li class="item-nav"><a href="#about-me-id" class="nav-link">About me</a></li>
-                        <li class="item-nav"><a href="#skills-id" class="nav-link">Skills</a></li>
-                        <li class="item-nav"><a href="#code-example-id" class="nav-link">Code Example</a></li>
-                        <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
-                        <li class="item-nav"><a href="#projects-id" class="nav-link">Projects</a></li>
-                        <li class="item-nav"><a href="#languages-id" class="nav-link">Languages</a></li>
-                        <li class="item-nav"><a href="#contact-id" class="nav-link">Contact</a></li>
-                    </ul>
-                </nav>
-                 <div class="empty">
-                    &nbsp;
-                 </div>
-                 <section class="name" id="name-title">
-                    <h1 class="section-title">VADIM LEGA</h1>
-                </section>
-                 
-            </div>    
+            <img src="./assets/img/LVV4.png" alt="Here is my photo" width="150">
+            <div class="free-space">
+                <div class="name-and-nav">
+                    <nav class="nav">
+                        <ul class="nav-list">
+                            <li class="item-nav"><a href="#about-me-id" class="nav-link">About me</a></li>
+                            <li class="item-nav"><a href="#skills-id" class="nav-link">Skills</a></li>
+                            <li class="item-nav"><a href="#code-example-id" class="nav-link">Code Example</a></li>
+                            <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
+                            <li class="item-nav"><a href="#projects-id" class="nav-link">Projects</a></li>
+                            <li class="item-nav"><a href="#languages-id" class="nav-link">Languages</a></li>
+                            <li class="item-nav"><a href="#contact-id" class="nav-link">Contact</a></li>
+                        </ul>
+                    </nav>
+                     <div class="empty">
+                        &nbsp;
+                     </div>
+                     <section class="name" id="name-title">
+                        <h1 class="section-title">VADIM LEGA</h1>
+                    </section>
+                </div>    
+            </div>
         </header>
     
         <main class="container-main">
