feat: change marker into list skills

--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
     <div class="container">
 
         <header class="container-header">
-            <img src="./assets/img/LVV3.png" alt="Here is my photo" width="150">
-            <div class="name-and-nav">
-                <nav class="nav">
-                    <ul class="nav-list">
-                        <li class="item-nav"><a href="#about-me-id" class="nav-link">About me</a></li>
-                        <li class="item-nav"><a href="#skills-id" class="nav-link">Skills</a></li>
-                        <li class="item-nav"><a href="#code-example-id" class="nav-link">Code Example</a></li>
-                        <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
-                        <li class="item-nav"><a href="#projects-id" class="nav-link">Projects</a></li>
-                        <li class="item-nav"><a href="#languages-id" class="nav-link">Languages</a></li>
-                        <li class="item-nav"><a href="#contact-id" class="nav-link">Contact</a></li>
-                    </ul>
-                </nav>
-                 <div class="empty">
-                    &nbsp;
-                 </div>
-                 <section class="name" id="name-title">
-                    <h1 class="section-title">VADIM LEGA</h1>
-                </section>
-                 
-            </div>    
+            <img src="./assets/img/LVV4.png" alt="Here is my photo" width="150">
+            <div class="free-space">
+                <div class="name-and-nav">
+                    <nav class="nav">
+                        <ul class="nav-list">
+                            <li class="item-nav"><a href="#about-me-id" class="nav-link">About me</a></li>
+                            <li class="item-nav"><a href="#skills-id" class="nav-link">Skills</a></li>
+                            <li class="item-nav"><a href="#code-example-id" class="nav-link">Code Example</a></li>
+                            <li class="item-nav"><a href="#education-id" class="nav-link">Education</a></li>
+                            <li class="item-nav"><a href="#projects-id" class="nav-link">Projects</a></li>
+                            <li class="item-nav"><a href="#languages-id" class="nav-link">Languages</a></li>
+                            <li class="item-nav"><a href="#contact-id" class="nav-link">Contact</a></li>
+                        </ul>
+                    </nav>
+                     <div class="empty">
+                        &nbsp;
+                     </div>
+                     <section class="name" id="name-title">
+                        <h1 class="section-title">VADIM LEGA</h1>
+                    </section>
+                </div>    
+            </div>
         </header>
     
         <main class="container-main">
@@ -49,12 +50,13 @@
                         <h2 class="section-title">Skills</h2>
                     </div>
                     <ul class="shift-list">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Git/GitHub</li>
-                        <li>C# Basic</li>
-                        <li>Piton Basic</li>
-                        <li>Basic: Lua, R</li>
+                        <li class="img-html"><img src="./assets/img/icons8-html-5-48.png" alt="logo html"><div class="name-html">HTML</div></li>
+                        <li class="img-css"><img src="./assets/img/icons8-css3-48.png" alt="logo css"><div class="name-css">CSS</div></li>
+                        <li class="img-github"><img src="./assets/img/icons8-github.png" alt="logo github"><div class="name-github">Git/GitHub</div></li>
+                        <li class="img-csharp"><img src="./assets/img/c_sharp.png" alt="logo Csharp"><div class="name-csharp">C# (basic knowledge)</div></li>
+                        <li class="img-python"><img src="./assets/img/python.png" alt="logo Python"><div class="name-python"> Python (basic knowledge)</div></li>
+                        <li class="img-lua"><img src="./assets/img/lua.png" alt="logo Lua"><div class="name-lua">Lua (basic knowledge)</div></li>
+                        <li class="img-r"><img src="./assets/img/r.png" alt="logo R"><div class="name-r">R (basic knowledge)</div></li>
                     </ul>
                 </section>
                 <section class="code-example" id="code-example-id">                    
