feat: change look link

--- a/index.html
+++ b/index.html
@@ -105,10 +105,22 @@
                         <h2 class="section-title">Contact:</h2>
                     </div>
                     <ul class="shift-list">
-                        <li class="img-location"><img src="./assets/img/location.png" alt="logo location"><div class="name-location">Location: Moscow, Russia</div></li>
-                        <li class="img-email"><img src="./assets/img/email.png" alt="logo email"><div class="name-email">E-mail: <a href="mailto:legavv@gmail.com">legavv@gmail.com</a></div></li>
-                        <li class="img-telegram"><img src="./assets/img/telegram.png" alt="logo telegram"><div class="name-telegram">Telegram: @legavv</div></li>
-                        <li class="img-discord"><img src="./assets/img/discord.png" alt="logo discord"><div class="name-discord">Discord: Vadim Lega (legavv)</div></li>
+                        <li class="img-location">
+                            <img src="./assets/img/location.png" alt="logo location">
+                            <div class="name-location">Location: Moscow, Russia</div>
+                        </li>
+                        <li class="img-email">
+                            <img src="./assets/img/email.png" alt="logo email">
+                            <div class="name-email">E-mail: <a href="mailto:legavv@gmail.com">legavv@gmail.com</a></div>
+                        </li>
+                        <li class="img-telegram">
+                            <img src="./assets/img/telegram.png" alt="logo telegram">
+                            <div class="name-telegram">Telegram: @legavv</div>
+                        </li>
+                        <li class="img-discord">
+                            <img src="./assets/img/discord.png" alt="logo discord">
+                            <div class="name-discord">Discord: Vadim Lega (legavv)</div>
+                        </li>
                     </ul>
                 </section>
             </div>
